objects/GEMS_Cat_Char_Value_Association__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>GEMS_Category_Characteristic_Association</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>GEMS_Category_Characteristic_Association</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <referenceTo>GEMS_Category__c</referenceTo>
        <relationshipLabel>GEMS Cat Char Value Associations</relationshipLabel>
        <relationshipName>GEMS_Category_Characteristic_Association</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Characteristic_Value__c</fullName>
        <label>Characteristic Value</label>
        <referenceTo>GEMS_Characteristic_Value__c</referenceTo>
        <relationshipLabel>GEMS Cat Char Value Associations</relationshipLabel>
        <relationshipName>GEMS_Cat_Char_Value_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsNew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsNew</label>
        <type>Checkbox</type>
    </fields>
    <label>GEMS Cat Char Value Association</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Category Characteristic Association</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEMS Cat Char Value Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>